# esp32-c2-dual-screen

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/esp32_c2_lcdkit/: esp32_c2_lcdkit.c  idf_component.yml
components/esp32_c2_lcdkit/include/bsp/: display.h  esp32_c2_lcdkit.h
components/espressif__esp_lcd_ili9341/: esp_lcd_ili9341.c
main/: CMakeLists.txt  idf_component.yml  main.c  mmap_generate_out1.h  mmap_generate_out2.h
main/1_28_UI/: 1_28_ui.c
main/out1/: resize.py
